Домашнее задание 2-9. Stream API и Optional. Задача - редакция 3